Add TypeScript dependencies and configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
         "fetch": false,
         "document": true
     },
+    "parser": "typescript-eslint-parser",
     "rules":{
         "no-console":0
     },
