--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
     "regenerator-runtime": "0.11.1",
     "rimraf": "2.6.2",
     "semantic-release": "15.0.2",
+    "ts-loader": "^5.2.2",
+    "typescript": "^3.1.3",
+    "typescript-eslint-parser": "^20.0.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "4.1.1",
     "webpack-cli": "2.0.10",
@@ -87,9 +90,9 @@
   },
   "dependencies": {
     "@magenta/sketch": "^0.1.2",
+    "@tensorflow-models/knn-classifier": "0.2.2",
     "@tensorflow-models/mobilenet": "0.2.2",
     "@tensorflow-models/posenet": "0.2.2",
-    "@tensorflow-models/knn-classifier": "0.2.2",
     "@tensorflow/tfjs": "0.13.0",
     "events": "^3.0.0"
   }
